# task-manager

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES_1.2.3.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflow/: ci.yml
.github/workflows/: release.yml  version-bump.yml
docs/: api-reference.md  development.md  examples.md  index.md  installation.md  user-guide.md
scripts/: version.py
task_manager/: __init__.py  cli.py  models.py  storage.py  utils.py
tests/: conftest.py  test_cli.py  test_models.py  test_storage.py
tests/integration/: test_cli_integration.py
tests/performance/: test_storage_performance.py
tests/unit/: test_models.py
